--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ main::before {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(var(--blur, 10vmin));
+  filter: blur(var(--blur, 10vmin));
 }
 
 .controls-color {
